@@ -998,7 +998,7 @@ Please check the URL you used to access this page.",
 'loadhist'		=> 'Loading page history',
 'currentrev'	=> 'Current revision',
 'revisionasof'          => 'Revision as of $1',
-'old-revision-navigation' => 'Revision as of $1; $5<br />($6) $3 | $2 | $4 ($7)',
+'old-revision-navigation' => 'Revision as of $1; $5<br />($6) $3 | $2 ($8) | $4 ($7)',
 'previousrevision'	=> '←Older revision',
 'nextrevision'		=> 'Newer revision→',
 'currentrevisionlink'   => 'Current revision',
